# SwimChrono

./: .gitignore  404.html  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  render.yaml  requirements.txt  sitemap.xml  swimchrono.db
.github/ISSUE_TEMPLATE/: 01-feature.md  02-bug.md
.github/ISSUE_TEMPLATES/: 01-feature.md  02-bug.md
.github/workflows/: main.yml
app/SwimChrono/: .gitignore  build.gradle  settings.gradle
app/api/: README.md  pyproject.toml
app/api/commands/: __init__.py
app/api/src/: main.py  requirements.txt  swimchrono.db
components/: index.html
contributing/: index.html
development/actors/: index.html
development/architecture/: index.html
development/wireframes/: index.html
development/wireframes-implementation/: index.html
docs/: home.md  index.md  market-study.md  target.md
docs/components/: index.md
docs/contributing/: index.md
docs/development/: actors.md  architecture.md  wireframes-implementation.md  wireframes.md
docs/guide/: user-guide.md
docs/integrations/: bluetooth.md  firebase.md  notifications.md  storage.md  unimplemented.md  zxing-qr.md
docs/lean-canvas/: lean-canvas.docx  lean-canvas.md
docs/user-guide/: tools.md
docs/ux/: index.md
guide/user-guide/: index.html
integrations/bluetooth/: index.html
integrations/firebase/: index.html
integrations/notifications/: index.html
integrations/storage/: index.html
integrations/unimplemented/: index.html
market-study/: index.html
mkdocs/: index.html
search/: search_index.json
user-guide/tools/: index.html
ux/: index.html
(+132 files in other folders)
