[tool.poetry]
name = "swimchrono-api"
version = "0.1.0"
description = "API to make available the data used on SwimChrono app"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
